# yummy

./: .config  .gitignore  AUTHORS  HACKING  Makefile.clean  Makefile.in  Makefile.selfcaller  Makefile.ubuild  README  build.sh  config.h.in  configure  configure.ac  create_release.sh  dependencies.list  dependencies_mingw_w64.list  enable_32bit.sh  install_dependencies.sh  install_dependencies_mingw_w64.sh  trefoil.php  yummy.rc
.github/: FUNDING.yml
.github/workflows/: build.yml  build_mingw_w64.yml  build_windows.yml
actions/yummy/: action.yml  action_windows_x86.yml
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
cheese/: Makefile.ubuild  component.c  image.c  modern.c  service.c  widget.c  widget.h
cheese/script/: Makefile.ubuild  interpreter.c  script.c
cheese/services/: Makefile.ubuild  albumart.c  application.c  core.c  dummy.c  language.c  png.c
include/: cheese.h  cheese_services.h  classic.h  configurations.h  debug.h  dsp.h  error.h  gen.h  gui.h  guid.h  image.h  in.h  menus.h  modern.h  module.h  msgbox.h  out.h  path.h  platform.h  plugin.h  preferences.h  skin.h  transverse.h  user.h  vfs.h  vis.h
include/cheese/: script.h
include/lib/: png.h
include/platform/: linux.h  windows.h
include/util/: load_file.h  simple_mmap.h
lib/: Makefile.ubuild  bmp.c  error.c  path.c  png.c  vfs.c
lib/ops/: Makefile.ubuild  stdops.c
player/: Makefile.ubuild  classic.c  configurations.c  discovery.c  discovery.h  init.c  init.h  playback.c  playback.h  playlist.c  playlist.h  plugin.c  zip.c
player/linux/: Makefile.ubuild  discovery.c  gui.c  gui_x11.c  main.c  menus.c  transverse.c  tray.c  x11.c
player/w32/: Makefile.ubuild  comdlg.cpp  gui.c  main.c  menus.c  preferences.c  transverse.c  tray.c
plugins/: Makefile.ubuild
plugins/dsp/: Makefile.ubuild
plugins/enc/: enc_dummy.c
plugins/in/: Makefile.ubuild  in_dummy.c  in_libav.c
plugins/winamp/dsp/: dsp_avfilter.c
plugins/winamp/in/: Makefile.ubuild  in_ffmpeg.c  in_libav.c
tools/: generate_service.sh
